@@ -1,3 +1,10 @@
+TAG: littriageload-6-0-17-8
+DATE: 06/07/2021
+STAFF: lec
+post build 39
+1. missing : New Failed PDF's in Needs_Review folder: 0
+2. Literature Triage Level 0 Errors : duplicate PDF file name 
+
 TAG: littriageload-6-0-17-7
 DATE: 06/03/2021
 STAFF: lec
